[package]
name = "howto"
version = "0.1.0"
authors = ["Kevin Herro <herro@sent.com>"]
description = "Generate a terminal command with natural language"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
